# steam-audio

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  SteamAudioHrtfManager  commons.py  downloads.html  index.html  license.html  version.py
core/: CMakeLists.txt  README.md  THIRDPARTY.md
core/data/meshes/: boxroom.mtl  simplescene.mtl  smallbox.mtl  sphere.mtl  sponza.mtl  teapot.mtl
core/doc/: CMakeLists.txt  Doxyfile.in  ambisonics-binaural-effect.rst  ambisonics-decode-effect.rst  ambisonics-encode-effect.rst  ambisonics-panning-effect.rst  ambisonics-rotation-effect.rst  audio-buffers.rst  baking.rst  binaural-effect.rst  build-instructions.rst  conf.py  context.rst  direct-effect.rst  embree.rst  energy-field.rst  geometry.rst  getting-started.rst  guide.rst  hrtf.rst  impulse-response.rst  index.rst  integration.rst  opencl.rst  panning-effect.rst  path-effect.rst  probes.rst  radeon-rays.rst  reconstructor.rst  reference.rst  reflections-effect.rst  scene.rst  serialization.rst  simulation.rst  trueaudio-next.rst  types.rst  virtual-surround-effect.rst
core/doc/media/: interleaved_deinterleaved.pptx
core/git/: README.md.in  downloads.html.in
core/src/benchmark/: CMakeLists.txt  benchmark_ambisonicsbinaural.cpp  benchmark_ambisonicsrotation.cpp  benchmark_astar.cpp  benchmark_baking.cpp  benchmark_binaural.cpp  benchmark_binauraleffect.cpp  benchmark_binauralrenderer.cpp  benchmark_convolution.cpp  benchmark_directsoundeffect.cpp  benchmark_hybridreverbsimulator.cpp  benchmark_panning.cpp  benchmark_patheffect.cpp  benchmark_pathing.cpp  benchmark_pathingbake.cpp  benchmark_probelookup.cpp  benchmark_raytracer.cpp  benchmark_reconstruction.cpp  benchmark_reflections.cpp  benchmark_reverb.cpp  benchmark_scene.cpp  benchmark_virtualsurround.cpp  pch.h  phonon_perf.cpp  phonon_perf.h
core/src/core/: CMakeLists.txt  EmbedKernels.py  air_absorption.cpp  air_absorption.h  ambisonics_binaural_effect.cpp  ambisonics_binaural_effect.h  ambisonics_decode_effect.cpp  ambisonics_decode_effect.h  ambisonics_encode_effect.cpp  ambisonics_encode_effect.h  ambisonics_panning_effect.cpp  ambisonics_panning_effect.h  ambisonics_rotate_effect.cpp  ambisonics_rotate_effect.h  api_advanced_simulation.cpp  api_ambisonics_binaural_effect.cpp  api_ambisonics_binaural_effect.h  api_ambisonics_decode_effect.cpp  api_ambisonics_decode_effect.h  api_ambisonics_encode_effect.cpp  api_ambisonics_encode_effect.h  api_ambisonics_panning_effect.cpp  api_ambisonics_panning_effect.h  api_ambisonics_rotate_effect.cpp  api_ambisonics_rotate_effect.h  api_audio_buffer.cpp  api_baking.cpp  api_binaural_effect.cpp  api_binaural_effect.h  api_context.cpp  api_context.h  api_direct_effect.cpp  api_direct_effect.h  api_embree_device.cpp  api_embree_device.h  api_energy_field.cpp  api_energy_field.h  api_geometry.cpp  api_hrtf.cpp  api_hrtf.h  (+270 more)
core/src/itest/: CMakeLists.txt  helpers.cpp  helpers.h  itest.cpp  itest.h  itest_ambisonicsbinauraleffect.cpp  itest_ambisonicsestimatedirection.cpp  itest_ambisonicspanningeffect.cpp  itest_ambisonicsrotateeffect.cpp  itest_audioengine.cpp  itest_bakedindirect.cpp  itest_binauraleffect.cpp  itest_bvh.cpp  itest_convolutioneffect.cpp  itest_delayeffect.cpp  itest_directsimulator.cpp  itest_directsoundeffect.cpp  itest_energycurves.cpp  itest_energyfield.cpp  itest_eqeffect.cpp  itest_gaineffect.cpp  itest_gui.cpp  itest_hybridreverbeffect.cpp  itest_iir.cpp  itest_impulseresponse.cpp  itest_instancedmesh.cpp  itest_panningeffect.cpp  itest_parametricreverb.cpp  itest_pathing.cpp  itest_probes.cpp  itest_raytracer.cpp  itest_reverbeffect.cpp  itest_virtualsurroundeffect.cpp  itest_windowfunction.cpp  pch.h  ui_audio_engine.cpp  ui_audio_engine.h  ui_window.cpp  ui_window.h
core/src/samples/: CMakeLists.txt  (+1 more)
docs/: index.html  (+1 more)
fmod/: CMakeLists.txt  README.md  setup.py
fmod/doc/: CMakeLists.txt  Doxyfile.in  api-reference.rst  build-instructions.rst  conf.py  getting-started.rst  guide.rst  index.rst  mixer-return.rst  phonon_fmod.html  phonon_fmod.md  phonon_fmod.md.in  reference.rst  reverb.rst  spatializer.rst
fmod/src/: CMakeLists.txt  audio_engine_settings.cpp  audio_engine_settings.h  auto_load_library.cpp  auto_load_library.h  environment_proxy.cpp  environment_proxy.h  library.cpp  library.h  mix_return_effect.cpp  pch.h  phonon_fmod.plugin.js  phonon_fmod.rc  phonon_fmod.rc.in  reverb_effect.cpp  spatialize_effect.cpp  spatializer_effect.cpp  steamaudio_fmod.cpp  steamaudio_fmod.h  steamaudio_fmod_version.h  steamaudio_fmod_version.h.in
unity/: CMakeLists.txt  LICENSE.md  README.md  setup.py
unity/doc/: CMakeLists.txt  Doxyfile.in  ambisonic-source.rst  api-reference.rst  asset-types.rst  baked-listener.rst  baked-source.rst  build-instructions.rst  components.rst  conf.py  dynamic-object.rst  geometry.rst  getting-started.rst  guide.rst  index.rst  listener.rst  manager-api.rst  manager.rst  material.rst  menu-commands.rst  mixer-effects.rst  mixer-return.rst  phonon_unity.html  phonon_unity.md  phonon_unity.md.in  probe-batch.rst  reference.rst  reverb.rst  reverbdata-api.rst  reverbdata.rst  reverbdatapoint.rst  settings.rst  sofafile.rst  source.rst  static-mesh.rst
unreal/doc/: CMakeLists.txt  actors.rst  asset-types.rst  baked-listener.rst  baked-source.rst  build-instructions.rst  components.rst  conf.py  dynamic-object.rst  geometry.rst  getting-started.rst  guide.rst  index.rst  listener.rst  material.rst  menu-commands.rst  occlusion-settings.rst  pandoc.css  phonon_unreal.html  phonon_unreal.md  probe-volume.rst  reference.rst  reverb-settings.rst  reverb.rst  settings.rst  sofa-file.rst  source.rst  spatialization-settings.rst  static-mesh.rst  submix-effects.rst
unreal/src/: CMakeLists.txt
wwise/: CMakeLists.txt
wwise/doc/: CMakeLists.txt  Doxyfile.in  api-reference.rst  build-instructions.rst  conf.py  effects.rst  getting-started.rst  guide.rst  index.rst  mixer-return.rst  spatializer.rst
wwise/src/: .gitignore  CMakeLists.txt  PremakePlugin.lua  SteamAudioWwiseConfig.h  additional_artifacts.json  bundle_template.json
(+677 files in other folders)
